<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="10dp"
    app:cardCornerRadius="2dp"
    app:cardPreventCornerOverlap="false"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:orientation="vertical"
            android:padding="10dp"
            android:id="@+id/container1"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/location"
                android:text="@string/catch_location"
                android:textColor="#000"
                android:textSize="19sp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/date"
                android:text="@string/date_of_catch"
                android:textSize="15sp"
                android:layout_marginTop="10dp"
                />

            <TextView
                android:id="@+id/species"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/species_of_catch"
                android:textSize="15sp"
                />

            <TextView
                android:id="@+id/weight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/weight_of_catch"
                android:layout_marginTop="10dp"
                android:textSize="15sp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/lure_type"
                android:text="@string/lure_used_for_catch"
                android:layout_marginTop="10dp"
                android:textSize="15sp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/rod_power"
                android:text="@string/rod_power_used_for_catch"
                android:layout_marginTop="10dp"
                android:textSize="15sp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/rod_length"
                android:text="@string/rod_length_used_for_catch"
                android:layout_marginTop="10dp"
                android:textSize="15sp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/reel_ratio"
                android:text="@string/reel_ratio_used_for_catch"
                android:layout_marginTop="10dp"
                android:textSize="15sp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/line_type"
                android:text="@string/fishing_line_type_used_for_catch"
                android:layout_marginTop="10dp"
                android:textSize="15sp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/line_pounds"
                android:text="@string/fishing_line_pounds_used_for_catch"
                android:layout_marginTop="10dp"
                android:textSize="15sp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/water_condition"
                android:text="@string/water_conditions_during_catch"
                android:layout_marginTop="10dp"
                android:textSize="15sp"
                />

        </LinearLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>